--- a/labs/L2LS/sites/site_2/config_backup/s2-leaf3_post_running-config.conf
+++ b/labs/L2LS/sites/site_2/config_backup/s2-leaf3_post_running-config.conf
@@ -1,5 +1,5 @@
 ! Command: show running-config
-! device: s1-spine1 (cEOSLab, EOS-4.35.1F-45319759.4351F (engineering build))
+! device: s2-leaf3 (cEOSLab, EOS-4.35.1F-45319759.4351F (engineering build))
 !
 no aaa root
 !
@@ -24,27 +24,20 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname s1-spine1
+hostname s2-leaf3
 ip domain lookup source-interface Management0
 ip name-server vrf default 192.168.0.1
 dns domain atd.lab
 !
 spanning-tree mode mstp
-no spanning-tree vlan-id 4093-4094
+no spanning-tree vlan-id 4094
 !
 system l1
    unsupported speed action error
    unsupported error-correction action error
 !
-vlan 10
-   name Ten
-!
-vlan 20
-   name Twenty
-!
-vlan 4093
-   name MLAG_L3
-   trunk group MLAG
+vlan 40
+   name Forty
 !
 vlan 4094
    name MLAG
@@ -53,102 +46,58 @@ vlan 4094
 aaa authorization exec default local
 !
 interface Port-Channel1
-   description MLAG_s1-spine2_Port-Channel1
+   description MLAG_s2-leaf4_Port-Channel1
    switchport mode trunk
    switchport trunk group MLAG
 !
 interface Port-Channel2
-   description L2_RACK1_Port-Channel2
-   switchport trunk allowed vlan 10
+   description L2_SPINES_Port-Channel4
+   switchport trunk allowed vlan 40
    switchport mode trunk
    mlag 2
 !
 interface Port-Channel4
-   description L2_RACK2_Port-Channel2
-   switchport trunk allowed vlan 20
-   switchport mode trunk
+   description SERVER_s2-host2
+   switchport access vlan 40
    mlag 4
+   spanning-tree portfast edge
 !
 interface Ethernet1
-   description MLAG_s1-spine2_Ethernet1
+   description MLAG_s2-leaf4_Ethernet1
    channel-group 1 mode active
 !
 interface Ethernet2
-   description L2_s1-leaf1_Ethernet2
+   description L2_s2-spine1_Ethernet4
    channel-group 2 mode active
 !
 interface Ethernet3
-   description L2_s1-leaf2_Ethernet2
+   description L2_s2-spine2_Ethernet4
    channel-group 2 mode active
 !
 interface Ethernet4
-   description L2_s1-leaf3_Ethernet2
-   channel-group 4 mode active
-!
-interface Ethernet5
-   description L2_s1-leaf4_Ethernet2
+   description SERVER_s2-host2_eth1
    channel-group 4 mode active
 !
 interface Ethernet6
-   description MLAG_s1-spine2_Ethernet6
+   description MLAG_s2-leaf4_Ethernet6
    channel-group 1 mode active
-!
-interface Ethernet7
-   description P2P_WANCORE_Ethernet2
-   mtu 1500
-   no switchport
-   ip address 10.0.0.29/31
-   ip ospf network point-to-point
-   ip ospf area 0.0.0.0
-!
-interface Ethernet8
-   description P2P_WANCORE_Ethernet2
-   mtu 1500
-   no switchport
-   ip address 10.0.0.33/31
-   ip ospf network point-to-point
-   ip ospf area 0.0.0.0
-!
-interface Loopback0
-   description ROUTER_ID
-   ip address 10.1.252.1/32
-   ip ospf area 0.0.0.0
 !
 interface Management0
    description OOB_MANAGEMENT
-   ip address 192.168.0.10/24
-!
-interface Vlan10
-   description Ten
-   ip address 10.10.10.2/24
-   ip virtual-router address 10.10.10.1
-!
-interface Vlan20
-   description Twenty
-   ip address 10.20.20.2/24
-   ip virtual-router address 10.20.20.1
-!
-interface Vlan4093
-   description MLAG_L3
-   mtu 1500
-   ip address 10.1.253.2/31
-   ip ospf network point-to-point
-   ip ospf area 0.0.0.0
+   ip address 192.168.0.24/24
 !
 interface Vlan4094
    description MLAG
    mtu 1500
    no autostate
-   ip address 10.1.253.0/31
+   ip address 10.2.253.0/31
 !
-ip virtual-router mac-address 00:1c:73:00:dc:01
-!
-ip routing
+no ip routing
 !
 mlag configuration
-   domain-id SPINES
+   domain-id RACK2
    local-interface Vlan4094
-   peer-address 10.1.253.1
+   peer-address 10.2.253.1
    peer-link Port-Channel1
    reload-delay mlag 300
    reload-delay non-mlag 330
@@ -164,14 +113,5 @@ router multicast
    !
    ipv6
       software-forwarding kernel
-!
-router ospf 100
-   router-id 10.1.252.1
-   passive-interface default
-   no passive-interface Ethernet7
-   no passive-interface Ethernet8
-   no passive-interface Vlan4093
-   redistribute connected
-   max-lsa 12000
 !
 end
